# 2024-dl-rs

./: Cargo.toml  README.md  acc5.csv
src/: main.rs
