
[package]
name = "assembly-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.37.0", features = ["full"] }
csv = "1.3.0"
anyhow = "1.0.82"
clap = "3"
camino = "1.1.6"
futures = "0.3.30"
regex = "1.10.4"

[dependencies.serde]
version = "1.0"
features = ["derive"]
